--- a/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="TileMap.cpp" />
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="AAWindow.cpp" />
+    <ClCompile Include="tower.cpp" />
     <ClCompile Include="wallet.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -188,7 +189,9 @@
     <ClInclude Include="TileMap.h" />
     <ClInclude Include="Text.h" />
     <ClInclude Include="AAWindow.h" />
+    <ClInclude Include="tower.h" />
     <ClInclude Include="wallet.h" />
+    <ClInclude Include="workshop.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
