--- a/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Gra.cpp" />
     <ClCompile Include="MainGra.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="monster.cpp" />
     <ClCompile Include="Template.cpp" />
     <ClCompile Include="TileMap.cpp" />
     <ClCompile Include="Text.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="json\json.h" />
     <ClInclude Include="MainGra.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="monster.h" />
     <ClInclude Include="Template.h" />
     <ClInclude Include="TileMap.h" />
     <ClInclude Include="Text.h" />
