--- a/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="MainGra.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="monster.cpp" />
+    <ClCompile Include="monsterEffect.cpp" />
     <ClCompile Include="Template.cpp" />
     <ClCompile Include="TileMap.cpp" />
     <ClCompile Include="Text.cpp" />
@@ -189,6 +190,7 @@
     <ClInclude Include="MainGra.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="monster.h" />
+    <ClInclude Include="monsterEffect.h" />
     <ClInclude Include="Template.h" />
     <ClInclude Include="TileMap.h" />
     <ClInclude Include="Text.h" />
