--- a/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="monster.cpp" />
     <ClCompile Include="monsterEffect.cpp" />
+    <ClCompile Include="path.cpp" />
     <ClCompile Include="Template.cpp" />
     <ClCompile Include="TileMap.cpp" />
     <ClCompile Include="Text.cpp" />
@@ -191,6 +192,7 @@
     <ClInclude Include="Menu.h" />
     <ClInclude Include="monster.h" />
     <ClInclude Include="monsterEffect.h" />
+    <ClInclude Include="path.h" />
     <ClInclude Include="Template.h" />
     <ClInclude Include="TileMap.h" />
     <ClInclude Include="Text.h" />
