--- a/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1.vcxproj
@@ -159,26 +159,34 @@
   <ItemGroup>
     <ClCompile Include="base.cpp" />
     <ClCompile Include="Basehp.cpp" />
+    <ClCompile Include="bbutton.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="effectHandler.cpp" />
     <ClCompile Include="fpsCounter.cpp" />
     <ClCompile Include="gameCompletedScreen.cpp" />
     <ClCompile Include="gameLoader.cpp" />
     <ClCompile Include="gameoverScreen.cpp" />
+    <ClCompile Include="healIcon.cpp" />
     <ClCompile Include="hpBar.cpp" />
+    <ClCompile Include="levelInterlude.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="AAGame.cpp" />
     <ClCompile Include="Gra.cpp" />
     <ClCompile Include="MainGra.cpp" />
     <ClCompile Include="map.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="menuParticleSystem.cpp" />
     <ClCompile Include="monster.cpp" />
     <ClCompile Include="monsterEffect.cpp" />
     <ClCompile Include="path.cpp" />
+    <ClCompile Include="pause.cpp" />
     <ClCompile Include="Template.cpp" />
+    <ClCompile Include="textureCache.cpp" />
     <ClCompile Include="TileMap.cpp" />
     <ClCompile Include="Text.cpp" />
-    <ClCompile Include="AAWindow.cpp" />
+    <ClCompile Include="upgradeImage.cpp" />
+    <ClCompile Include="wave.cpp" />
+    <ClCompile Include="Window.cpp" />
     <ClCompile Include="tower.cpp" />
     <ClCompile Include="towerManagament.cpp" />
     <ClCompile Include="wallet.cpp" />
@@ -197,18 +205,25 @@
     <ClInclude Include="gameLoader.h" />
     <ClInclude Include="gameoverScreen.h" />
     <ClInclude Include="Gra.h" />
+    <ClInclude Include="healIcon.h" />
     <ClInclude Include="hpBar.h" />
     <ClInclude Include="json\json.h" />
+    <ClInclude Include="levelInterlude.h" />
     <ClInclude Include="MainGra.h" />
     <ClInclude Include="map.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="menuParticleSystem.h" />
     <ClInclude Include="monster.h" />
     <ClInclude Include="monsterEffect.h" />
     <ClInclude Include="path.h" />
+    <ClInclude Include="pause.h" />
     <ClInclude Include="Template.h" />
+    <ClInclude Include="textureCache.h" />
     <ClInclude Include="TileMap.h" />
     <ClInclude Include="Text.h" />
-    <ClInclude Include="AAWindow.h" />
+    <ClInclude Include="upgradeImage.h" />
+    <ClInclude Include="wave.h" />
+    <ClInclude Include="Window.h" />
     <ClInclude Include="tower.h" />
     <ClInclude Include="towerManagement.h" />
     <ClInclude Include="wallet.h" />
