--- a/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1.vcxproj
@@ -157,9 +157,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="archerTower.cpp" />
+    <ClCompile Include="attackTower.cpp" />
     <ClCompile Include="base.cpp" />
     <ClCompile Include="Basehp.cpp" />
     <ClCompile Include="bbutton.cpp" />
+    <ClCompile Include="bullet.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="effectHandler.cpp" />
     <ClCompile Include="fpsCounter.cpp" />
@@ -168,7 +171,10 @@
     <ClCompile Include="gameoverScreen.cpp" />
     <ClCompile Include="healIcon.cpp" />
     <ClCompile Include="hpBar.cpp" />
+    <ClCompile Include="iceTower.cpp" />
+    <ClCompile Include="laserTower.cpp" />
     <ClCompile Include="levelInterlude.cpp" />
+    <ClCompile Include="lightingTower .cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="AAGame.cpp" />
     <ClCompile Include="Gra.cpp" />
@@ -180,6 +186,8 @@
     <ClCompile Include="monsterEffect.cpp" />
     <ClCompile Include="path.cpp" />
     <ClCompile Include="pause.cpp" />
+    <ClCompile Include="poisonTower.cpp" />
+    <ClCompile Include="straightBullet.cpp" />
     <ClCompile Include="Template.cpp" />
     <ClCompile Include="textureCache.cpp" />
     <ClCompile Include="TileMap.cpp" />
@@ -190,11 +198,15 @@
     <ClCompile Include="tower.cpp" />
     <ClCompile Include="towerManagament.cpp" />
     <ClCompile Include="wallet.cpp" />
+    <ClCompile Include="workshop.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="archerTower.h" />
+    <ClInclude Include="attackTower.h" />
     <ClInclude Include="base.h" />
     <ClInclude Include="Basehp.h" />
     <ClInclude Include="bbutton.h" />
+    <ClInclude Include="bullet.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="effectHandler.h" />
     <ClInclude Include="Font.h" />
@@ -207,8 +219,11 @@
     <ClInclude Include="Gra.h" />
     <ClInclude Include="healIcon.h" />
     <ClInclude Include="hpBar.h" />
+    <ClInclude Include="iceTower.h" />
     <ClInclude Include="json\json.h" />
+    <ClInclude Include="laserTower.h" />
     <ClInclude Include="levelInterlude.h" />
+    <ClInclude Include="lightingTower.h" />
     <ClInclude Include="MainGra.h" />
     <ClInclude Include="map.h" />
     <ClInclude Include="Menu.h" />
@@ -217,6 +232,8 @@
     <ClInclude Include="monsterEffect.h" />
     <ClInclude Include="path.h" />
     <ClInclude Include="pause.h" />
+    <ClInclude Include="poisonTower.h" />
+    <ClInclude Include="straightBullet.h" />
     <ClInclude Include="Template.h" />
     <ClInclude Include="textureCache.h" />
     <ClInclude Include="TileMap.h" />
